syntax = "proto3";

package multifiles;

option go_package = "github.com/bavix/gripmock/example/multi-files";
// The Gripmock service definition.
service Gripmock1 {
  // simple unary method
  rpc SayHello (Request1) returns (Reply1);
}

// The request message containing the user's name.
message Request1 {
  string name = 1;
}

// The response message containing the greetings
message Reply1 {
  string message = 1;
  int32 return_code = 2;
}